# analysis-output

./: README.md  pyproject.toml  visualizations.ipynb
Visualizations/: Pearson_Visualizations.ipynb  Spearman_Visualizations.ipynb  Template.ipynb
Visualizations/Bivariate/: Mann_Whitney_U_Visualizations.ipynb  paired_T_visualizations.ipynb  students_visualizations.ipynb  wilcoxon_visualizations.ipynb
Visualizations/Correlations/: Correlations_Visualizations.ipynb  Kendalls_Tau_Visualizations.ipynb  Pearson_Visualizations.ipynb  Point_Biserial_Visualizations.ipynb  Spearman_Visualizations.ipynb
Visualizations/Multivariate/: F_Test_Visualizations.ipynb  Fisher_Exact_Visualizations.ipynb  Kruskall_Wallis_Visualizations.ipynb  kruskal_wallis_visualizations.ipynb  oneway_ANOVA_visualizations.ipynb
Visualizations/Proportions/: Chi_Square_Visualizations.ipynb
outputs/raw/: ABOUT.md
outputs/raw/Bivariate/JMP/: Welch's_Output.jrp
outputs/raw/Correlations/JMP/: Spearman_Output.jrp
outputs/raw/Multivariate/JMP/: F-test_Output.jrp
outputs/raw/R/: bivariate_tests.txt  correlation_tests.txt  multivariate_tests.txt  proportion_tests.txt
outputs/screenshots/: ABOUT.md
scripts/: base_r_nhst.R  oneway_r.R  statsmodels_nhst.py
scripts/JMP/: ChiSquare_Output.jrp  Factorial_ANOVA_Output.jrp  Kendall_Output.jrp  Kruskal-Wallis_Output.jrp  Paired-T_Output_(Wrong).jrp  Pearson_Output.jrp  Point-Biserial_Output.jrp  Student-T_Output_(Wrong).jrp  Wilcoxon_Output_(Wrong).jrp
scripts/Stats_Model/: statsmodels_nhst.py
