[tool.poetry]
name = "analysis-output"
version = "0.1.0"
description = ""
authors = ["Eunice Jun <eunice.m.jun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
statsmodels = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
