[tool.poetry]
name = "analysis-output"
version = "0.1.0"
description = ""
authors = ["Eunice Jun <eunice.m.jun@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
statsmodels = "0.12.2"
scipy = "^1.8.0"
altair = "^4.2.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
